# astrogeo

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  COMPLETE_ADDITIONS_SUMMARY.md  DEPLOYMENT_GUIDE.md  Dockerfile  Github workflows ci cd .yaml  IMPLEMENTATION_COMPLETE.md  Makefile  PROJECT_COMPREHENSIVE_WORKLOG.md  PROJECT_MASTER_REPORT.md  PROJECT_OVERVIEW.md  README.md  RECENT_ADDITIONS.md  STEP1_COMPLETE.md  alembic.ini  docker-compose.yaml  dvc.yaml  installed.txt  params.yaml  pyproject.toml  requirements-dev.txt  requirements-docker.txt  requirements.txt  setup.py  test_output.txt
k8s/: deployment-complete.yaml
scripts/: init_postgis.sql  seed_demo_data.py
src/: main.py
src/agents/: __init__.py  astro_agent.py  base_agent.py  data_agent.py  geo_agent.py  langgraph_pipeline.py  ml_agent.py  orchestrator.py  rag_retriever.py
src/api/: docs.py  main.py  middleware.py
src/api/routes/: admin.py  agents.py  auth.py  demo.py  health.py  locations.py  predictions.py
src/core/: auth_deps.py  cache.py  cache_utils.py  config.py  exceptions.py  logging.py  security.py  sentry.py
src/data/: ingestion.py  preprocessing.py  transformers.py  validators.py
src/database/: connection.py  models.py  repositories.py
src/database/migrations/: env.py
src/features/: engineering.py
src/models/: base_model.py  training.py
src/schemas/: requests.py  responses.py
src/services/: agent_service.py  cache_service.py  email_service.py  monitoring_service.py  prediction_service.py  smtp_email_service.py  task_service.py  training_service.py  upload_service.py
templates/emails/: password_reset.html  welcome.html
tests/: conftest.py
tests/integration/: README.md  STATUS.md  conftest.py  run_integration_tests.py  test_agent_workflows.py  test_api_workflows.py  test_database.py  test_end_to_end.py  test_monitoring.py
tests/test_agents/: test_astro_agent.py  test_data_agent.py
tests/test_api/: test_admin.py  test_auth.py  test_integration.py  test_locations.py
tests/test_core/: test_config.py  test_logging.py  test_security.py
tests/test_database/: test_models.py  test_repositories.py
tests/test_services/: test_agent_monitoring.py  test_prediction_caching.py  test_prediction_service.py  test_smtp_email_service.py
