# ============================================================================
# PyProject.toml - Modern Python Project Configuration
# AstroGeo AI MLOps Platform
# ============================================================================

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astrogeo-ai-mlops"
version = "1.0.0"
description = "Enterprise MLOps platform with Agentic AI and Geospatial Analytics"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Production Team", email = "team@astrogeo.ai"}
]
maintainers = [
    {name = "Production Team", email = "team@astrogeo.ai"}
]
keywords = [
    "mlops",
    "machine-learning",
    "agentic-ai",
    "geospatial",
    "fastapi",
    "langchain",
    "mlflow",
    "postgis"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "redis>=5.0.1",
    "mlflow>=2.9.2",
    "langchain>=0.1.0",
    "openai>=1.6.1",
    "geoalchemy2>=0.14.2",
    "shapely>=2.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.12.1",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "bandit>=1.7.6",
    "pre-commit>=3.6.0",
]

docs = [
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=2.0.0",
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.3",
]

all = [
    "astrogeo-ai-mlops[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/your-org/astrogeo-ai-mlops"
Documentation = "https://astrogeo-ai-mlops.readthedocs.io"
Repository = "https://github.com/your-org/astrogeo-ai-mlops"
Issues = "https://github.com/your-org/astrogeo-ai-mlops/issues"

[project.scripts]
astrogeo = "src.cli:main"

# ============================================================================
# BLACK - Code Formatting
# ============================================================================
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

# ============================================================================
# ISORT - Import Sorting
# ============================================================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip_glob = ["*/migrations/*"]

# ============================================================================
# PYTEST - Testing Configuration
# ============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-branch",
    "--maxfail=3",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "api: marks tests as API tests",
    "database: marks tests requiring database",
    "agent: marks tests for AI agents",
]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

# ============================================================================
# COVERAGE - Code Coverage
# ============================================================================
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/venv/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# ============================================================================
# MYPY - Type Checking
# ============================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_calls = false
disallow_any_generics = false
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
show_error_codes = true
show_error_context = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# ============================================================================
# BANDIT - Security Linting
# ============================================================================
[tool.bandit]
exclude_dirs = ["tests", "migrations", "venv"]
skips = ["B101", "B601"]

# ============================================================================
# PYLINT - Advanced Linting
# ============================================================================
[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "R0903",  # too-few-public-methods
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
]

[tool.pylint.format]
max-line-length = 127

# ============================================================================
# RUFF - Fast Python Linter
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["E501"]

# ============================================================================
# SETUPTOOLS - Build Configuration
# ============================================================================
[tool.setuptools]
package-dir = {"" = "."}
packages = ["src"]

[tool.setuptools.dynamic]
version = {attr = "src.__version__"}

# ============================================================================
# PDM - Python Development Master
# ============================================================================
[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
]
lint = [
    "black>=23.12.1",
    "isort>=5.13.2",
    "flake8>=7.0.0",
]

# ============================================================================
# END
# ============================================================================